# latentphysics-world

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: GETTING_STARTED.md
examples/: _chair.py  _chair_mesh.py  _ik.py  _record.py  articulated_room.py  collision_tower.py  convex_decomposition.py  franka_open_drawer_arm.py  franka_pick_place.py  franka_push.py  franka_push_chair.py  franka_stack.py  franka_tool_use.py  perception_camera.py  perception_lidar.py  real_assets.py  replay_trajectory.py  train_franka_reach.py
latentphysics/: __init__.py  config.py
latentphysics/assets/: import_3d.py  scene_gen.py
latentphysics/backend/: warp_engine.py
latentphysics/broadphase/: __init__.py
latentphysics/envs/: __init__.py  base.py  franka_reach.py  open_drawer.py  sentinels.py
latentphysics/perception/: __init__.py  camera.py  lidar.py  pointcloud.py
latentphysics/rl/: __init__.py  ppo.py
scripts/: fetch_assets.py  inspect_furniture.py  make_hero.py
tests/: test_articulated_gpu.py  test_articulated_tasks_gpu.py  test_backend_gpu.py  test_chair_example.py  test_envs_gpu.py  test_furniture_semantics.py  test_ik.py  test_import3d_textures.py  test_open_drawer_gpu.py  test_perception_gpu.py  test_readme_snippet_gpu.py  test_smoke.py  test_throughput_gpu.py  test_validate.py
